manifest/objects/Product_Family__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>Product_Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Email_for_Invoice__c</fullName>
        <label>Client Email for Invoice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Engagement_Description__c</fullName>
        <label>Custom Engagement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_Month_for_Case_Rate_Fees_Invoice__c</fullName>
        <label>Day of Month for Case Rate Fees Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_of_Month_for_Consult_Fee_Invoice__c</fullName>
        <label>Day of Month for Consult Fee Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                    <default>true</default>
                    <label>1st</label>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_of_Month_for_Membership_Fee_Invoice__c</fullName>
        <defaultValue>&quot;4th&quot;</defaultValue>
        <label>Day of Month for Membership Fee Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dedicated_800_Number__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <inlineHelpText>Indicates whether the client has a dedicated 800 number</inlineHelpText>
        <label>Dedicated 800 Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Eligibility_Audit_Rights__c</fullName>
        <defaultValue>&quot;Standard&quot;</defaultValue>
        <label>EMS Eligibility Audit Rights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligbilty_File_Comments__c</fullName>
        <label>Eligbilty File Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_Sent_by_of_Month__c</fullName>
        <defaultValue>&quot;1st&quot;</defaultValue>
        <label>Eligibility File Sent by __ of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 Days Prior to Start Date</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>Within 1st 10 Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Dependents__c</fullName>
        <defaultValue>&quot;Spouses and Children&quot;</defaultValue>
        <inlineHelpText>Select type of eligible dependent(s)</inlineHelpText>
        <label>Eligible Dependents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Tier__c</fullName>
        <label>Engagement Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 1+5</fullName>
                </value>
                <value>
                    <fullName>Tier 2+5</fullName>
                </value>
                <value>
                    <fullName>Tier 3+5</fullName>
                </value>
                <value>
                    <fullName>Tier 4+5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Description_of_Eligible_Members__c</fullName>
        <label>Full Description of Eligible Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Product_Family_Comments__c</fullName>
        <label>General Product Family Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Eligible_Description__c</fullName>
        <label>Global Eligible  Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Eligible__c</fullName>
        <inlineHelpText>Indicate whether eligible employees residing in other countries are eligible</inlineHelpText>
        <label>Global Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Fee__c</fullName>
        <label>Implementation Fee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentives_Surcharges_Description__c</fullName>
        <label>Incentives/Surcharges Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentives_Surcharges__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Incentives/Surcharges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Per Case Block</fullName>
                </value>
                <value>
                    <fullName>Self-Bill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Payment_Comments__c</fullName>
        <label>Non-Standard Payment Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Payment_Term__c</fullName>
        <label>Non-Standard Payment Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Reporting_Fee_Per_Hour__c</fullName>
        <defaultValue>200</defaultValue>
        <inlineHelpText>Non-standard hourly reporting fee, if applicable</inlineHelpText>
        <label>Non-Standard Reporting Fee (Per Hour)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Days__c</fullName>
        <label>Payment Terms (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>Net 180</fullName>
                </value>
                <value>
                    <fullName>Prior to 1st of Month</fullName>
                </value>
                <value>
                    <fullName>On the Last Day of the Month</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preventing_Autorenewal_Days__c</fullName>
        <inlineHelpText>Indicates the number of days&apos; notice a client must provide to prevent products from automatically renewing</inlineHelpText>
        <label>Preventing Autorenewal (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Term_for_Conv_Early_Term_Fee__c</fullName>
        <label>Prod Term. for Conv Early Term. Fee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Auto_Renew__c</fullName>
        <inlineHelpText>Select &apos;Yes&apos; if products automatically renew</inlineHelpText>
        <label>Product Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_End_Date__c</fullName>
        <label>Product Family End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Family_Name__c</fullName>
        <label>Product Family Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>License Platform</fullName>
                </value>
                <value>
                    <fullName>Expert Medical Services</fullName>
                </value>
                <value>
                    <fullName>Chronic Care Services</fullName>
                </value>
                <value>
                    <fullName>Virtual Care Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Family Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family_Start_Date__c</fullName>
        <inlineHelpText>Indicates the first start date of the services</inlineHelpText>
        <label>Product Family Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Family_Status__c</fullName>
        <label>Product Family Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Renewal_Comments__c</fullName>
        <inlineHelpText>Enter comments or the condition(s) that must be met for the products to auto-renew, if applicable</inlineHelpText>
        <label>Product Renewal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Renewal_Notice_Date__c</fullName>
        <label>Product Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Renewal_Notice_Days__c</fullName>
        <label>Product Renewal Notice Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Renewal_Term_Months__c</fullName>
        <inlineHelpText>The number of months a product auto-renew for. For example: if the products automatically renew for one-year terms, enter 12.</inlineHelpText>
        <label>Product Renewal Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Term_Termination_Comments__c</fullName>
        <label>Product Term &amp; Termination Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Term_Years__c</fullName>
        <label>Product Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Termination_for_Conv_Window__c</fullName>
        <inlineHelpText>Indicate when products can be terminated for convenience</inlineHelpText>
        <label>Product Termination for Conv Window</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Any Time</fullName>
                </value>
                <value>
                    <fullName>On or After 1st Anniv of Effective Date</fullName>
                </value>
                <value>
                    <fullName>1st Anniv of Start Date</fullName>
                </value>
                <value>
                    <fullName>Each Anniv of Start Date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Termination_for_Conv__c</fullName>
        <inlineHelpText>Indicate whether products can be terminated for convenience, and which party(ies) can terminate for convenience</inlineHelpText>
        <label>Product Termination for Conv</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: Client</fullName>
                </value>
                <value>
                    <fullName>Yes: Teladoc</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes: Within Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Order_Equipment_Lease__c</fullName>
        <label>Purchase Order- Equipment Lease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Order_One_Time_Services__c</fullName>
        <label>Purchase Order- One-Time Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Order_Subscription_Services__c</fullName>
        <label>Purchase Order- Subscription Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Lock_Comments__c</fullName>
        <label>Rate Lock Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Lock_Period__c</fullName>
        <label>Rate Lock Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Comment__c</fullName>
        <label>Reporting Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Terms__c</fullName>
        <label>Shipment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Origin</fullName>
                </value>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_for_Conv_Days__c</fullName>
        <inlineHelpText>Number of days&apos; notice required to terminate for convenience</inlineHelpText>
        <label>Termination for Conv (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilization_Reporting_Frequency__c</fullName>
        <label>Utilization Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_Product_Family</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_Product_Family1</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Product Family</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>